# Analysis

./: .gitignore
.github/workflows/: 4_testintegration_api-tier-2.yml  4_testintegration_rbac-tier-0-1.yml  5_builderpackage_gcc.yml
src/: Makefile
src/analysisd/: rules.c
src/client-agent/: agentd.c  agentd.h  buffer.c
src/data_provider/src/extended_sources/: CMakeLists.txt
src/engine/: CMakeLists.txt
src/engine/cmake/: WazuhExternalDependencies.cmake
src/engine/cmake/patches/: date-howardhinnant-cmake.patch
src/engine/source/: main.cpp
src/engine/source/api/event/: CMakeLists.txt
src/engine/source/api/tester/include/api/tester/: handlers.hpp
src/engine/source/api/tester/src/: handlers.cpp
src/engine/source/base/: CMakeLists.txt
src/engine/source/datagramsrv/: CMakeLists.txt  datagram_server.cpp  datagram_server.hpp
src/engine/source/httpsrv/: CMakeLists.txt  datagram_socket.cpp  datagram_socket.hpp
src/engine/source/parser/: CMakeLists.txt  legacy_protocol_parser.cpp  legacy_protocol_parser.hpp
src/engine/source/proto/src/: tester.proto
src/engine/source/queue/include/queue/: concurrentQueue.hpp
src/engine/source/router/include/router/: orchestrator.hpp
src/engine/source/router/src/: orchestrator.cpp
src/engine/test/integration_tests/: CMakeLists.txt  datagram_server_it.cpp
src/engine/tools/engine-suite/src/engine_test/: base_tester_integration.py  raw_tester_integration.py  tester_integration.py
src/engine/tools/engine-suite/src/engine_test/cmds/: add.py  run_raw.py
src/engine/tools/engine-suite/src/engine_test/conf/: integration.py  store.py
src/shared_modules/utils/flatbuffers/schemas/: rsync.fbs  syscollector_deltas.fbs
src/syscheckd/src/: create_db.c
src/unit_tests/client-agent/: test_buffer.c
src/wazuh_db/: wdb_fim.c
src/wazuh_modules/: wm_sca.c
src/wazuh_modules/inventory_harvester/indexer/template/: wazuh-states-inventory-groups-update.json  wazuh-states-inventory-groups.json  wazuh-states-inventory-users-update.json  wazuh-states-inventory-users.json
src/wazuh_modules/inventory_harvester/src/: inventoryHarvesterFacade.cpp  inventoryHarvesterFacade.hpp  systemInventoryOrchestrator.hpp
src/wazuh_modules/inventory_harvester/src/systemInventory/: deleteElement.hpp  systemContext.hpp  systemFactoryOrchestrator.hpp  upsertElement.hpp
src/wazuh_modules/inventory_harvester/src/systemInventory/elements/: group.hpp  groupElement.hpp  user.hpp  userElement.hpp
src/wazuh_modules/inventory_harvester/src/wcsModel/: inventoryGroupHarvester.hpp  inventoryUserHarvester.hpp
src/wazuh_modules/inventory_harvester/src/wcsModel/wcsClasses/: group.hpp  user.hpp
src/wazuh_modules/inventory_harvester/tests/unit/: CMakeLists.txt  groupElement_test.cpp  inventoryGroupHarvester_test.cpp  inventoryHarvesterFacade_test.cpp  inventoryUserGroup_test.cpp  inventoryUserHarvester_test.cpp  systemContextGroup_test.cpp  systemContextUserGroup_test.cpp  systemContextUser_test.cpp  systemInventoryUpsertElement_test.cpp  userElement_test.cpp
src/win32/: win_service.c
tests/integration/test_api/test_rbac/: test_policy_position.py
